--- a/ilosh_reservationList.htm
+++ b/ilosh_reservationList.htm
@@ -231,7 +231,7 @@
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">1</td>
                                                     <td>ilosh111-Z102</td>
-                                                    <td><a href="#">S11105080011</a></td>
+                                                    <td><a href="ilosh_reservationEdit.htm">S11105080011</a></td>
                                                     <td>liucc@hyweb.com.tw</td>
                                                     <td>劉佳淇</td>
                                                     <td>凌網科技股份有限公司</td>
@@ -240,7 +240,7 @@
                                                     <td><time>2022/11/16 上午</time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="#" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="ilosh_reservationEdit.htm" class="btn"><i class="i_edit"></i>編輯</a>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -248,7 +248,7 @@
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">2</td>
                                                     <td>ilosh111-Z102</td>
-                                                    <td><a href="#">S11105080001</a></td>
+                                                    <td><a href="ilosh_reservationEdit.htm">S11105080001</a></td>
                                                     <td>liucc@hyweb.com.tw</td>
                                                     <td>劉佳淇</td>
                                                     <td>凌網科技股份有限公司</td>
@@ -257,7 +257,7 @@
                                                     <td><time>2022/11/16 下午</time></td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="#" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="ilosh_reservationEdit.htm" class="btn"><i class="i_edit"></i>編輯</a>
                                                         </div>
                                                     </td>
                                                 </tr>
