--- a/index_list.html
+++ b/index_list.html
@@ -323,7 +323,7 @@
                         <td>
                             <ul>
                                 <li><font style="color:red;">(調整欄位、增加友善列印)</font> 2-1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
-                                <li>2-2.預約管理 <a href="#" target="_blank"></a></li>
+                                <li><font style="color:red;">(新增)</font> 2-2.預約管理 <a href="ilosh_reservationEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
