--- a/index_list.html
+++ b/index_list.html
@@ -312,7 +312,7 @@
                         <td>AP功能：VDI - 1.場地空間管理:地點/電腦/分析區開放時間</td>
                         <td>
                             <ul>
-                                <li>1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(調整版面)</font> 1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
                                 <li><font style="color:red;">(調整)</font> 1-2.新增編修場地/座位/開放時間設定 <a href="ilosh_spaceedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
@@ -323,7 +323,7 @@
                         <td>
                             <ul>
                                 <li><font style="color:red;">(調整欄位、增加友善列印)</font> 2-1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
-                                <li><font style="color:red;">(新增)</font> 2-2.預約管理 <a href="ilosh_reservationEdit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(調整版面)</font> 2-2.預約管理 <a href="ilosh_reservationEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
