--- a/index_list.html
+++ b/index_list.html
@@ -325,6 +325,7 @@
                                 <li><font style="color:red;">(調整欄位、增加友善列印)</font> 2-1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
                                 <li><font style="color:red;">(調整版面)</font> 2-2.預約管理 <a href="ilosh_reservationEdit.htm" target="_blank"></a></li>
                             </ul>
+                            <p>10/28 註：處理條列頁友善列印與版面共用，需更新 customize.css和fileUpload.css</p>
                         </td>
                     </tr>
                     <tr>
