--- a/index_list.html
+++ b/index_list.html
@@ -313,7 +313,7 @@
                         <td>
                             <p style="color:red;">註：設計師有更新 Menu 行動展開部分，需更新JS及CSS <a href="supercms_updateMENU.zip" target="_blank"></a></p>
                             <ul>
-                                <li><font style="color:red;">(調整版面)</font> 1-1.場地/設備管理清單</li>
+                                <li><font style="color:red;">(調整版面)</font> 1-1.場地/設備管理清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
                                 <li><font style="color:red;">(調整)</font> 1-2.新增編修場地/座位/開放時間設定 <a href="ilosh_spaceedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
