--- a/ilosh_researchStat.htm
+++ b/ilosh_researchStat.htm
@@ -325,7 +325,7 @@
 
                                     <div class="table_wrapper">
                                         <table class="table_hover">
-                                            <caption>研究成果區間統計by資料</caption>
+                                            <caption>研究成果區間統計by單元</caption>
                                             <thead>
                                                 <tr>
                                                     <th>序號</th>
@@ -344,6 +344,30 @@
                                                 <tr>
                                                     <td class="num">2</td>
                                                     <td>簡訊</td>
+                                                    <td>1088</td>
+                                                    <td>1058</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num">3</td>
+                                                    <td>研究季刊</td>
+                                                    <td>1088</td>
+                                                    <td>1058</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num">4</td>
+                                                    <td>各年度研究報告</td>
+                                                    <td>1101</td>
+                                                    <td>1222</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num">5</td>
+                                                    <td>簡訊</td>
+                                                    <td>1088</td>
+                                                    <td>1058</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num">6</td>
+                                                    <td>研究季刊</td>
                                                     <td>1088</td>
                                                     <td>1058</td>
                                                 </tr>
