--- a/ilosh_reservationEdit.htm
+++ b/ilosh_reservationEdit.htm
@@ -12,6 +12,7 @@
     <![endif]-->
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/supercms.css">
+    <link rel="stylesheet" href="css/customize.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
@@ -84,7 +85,7 @@
                                             <div class="datepick" style="flex: 0 1 50%;padding-left:.75em;">
                                                     <div class="labelEffect">
                                                         <!--處理 Animated Labels for date/datetime-local 會卡在一起的效果-->
-                                                        <input name="" type="text" value="2022-10-16" onfocus="(this.type='datetime')" onblur="if(!this.value) this.type='text'" class="dynamicCol used">
+                                                        <input name="" type="text" value="2022-10-16" onfocus="(this.type='date')" onblur="if(!this.value) this.type='text'" class="dynamicCol used">
                                                         <label>預約日期</label>
                                                     </div>
                                             </div>
