--- a/ilosh_spaceedit.htm
+++ b/ilosh_spaceedit.htm
@@ -12,6 +12,7 @@
     <![endif]-->
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/supercms.css">
+    <link rel="stylesheet" href="css/customize.css">
     <!-- favicon -->
     <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
