--- a/index_list.html
+++ b/index_list.html
@@ -327,6 +327,11 @@
                                 <li><font style="color:red;">(調整版面)</font> 2-2.預約管理 <a href="ilosh_reservationEdit.htm" target="_blank"></a></li>
                             </ul>
                             <p>10/28 註：處理條列頁友善列印與版面共用，需更新 customize.css和fileUpload.css</p>
+                            <ul>
+                                <li>2-3.案件清單 <a href="ilosh_planapplyList.htm" target="_blank"></a></li>
+                                <li>2-4.案件管理 <a href="ilosh_planapplyEdit.htm" target="_blank"></a></li>
+                            </ul>
+
                         </td>
                     </tr>
                     <tr>
