--- a/ilosh_planapplyEdit.htm
+++ b/ilosh_planapplyEdit.htm
@@ -212,6 +212,9 @@
                                                         <div class="labelEffect">
                                                             <input name="" type="text">
                                                             <label>主機名稱查詢</label>
+                                                            <button class="btn btn-icon">
+                                                                <i class="i_trash"></i>
+                                                            </button>
                                                         </div>
                                                         <!-- <div class="help">說明文字</div> -->
                                                         <div class="additional"><button class="btn btn-primary">搜尋</button></div>
@@ -239,7 +242,7 @@
                                                                     <td>1</td>
                                                                     <td>Data01</td>
                                                                     <td>此主機提供多案共用</td>
-                                                                    <td>ilosh109-M108,ilosh110-Q104</td>
+                                                                    <td>ilosh109-M108, ilosh110-Q104</td>
                                                                </tr>
                                                                 <tr>
                                                                     <td><input type="checkbox" class="used" checked></td>
@@ -262,11 +265,15 @@
                                                 <div class="flex-form">
                                                     <div class="form_grp">
                                                         <div class="labelEffect">
-                                                            <input name="" type="text">
+                                                            <input name="" type="text" value="liucc">
                                                             <label>會員帳號查詢</label>
+                                                            <button class="btn btn-icon">
+                                                                <i class="i_trash"></i>
+                                                            </button>
                                                         </div>
                                                         <!-- <div class="help">說明文字</div> -->
                                                         <div class="additional"><button class="btn btn-primary">搜尋</button></div>
+                                                        <div class="additional"><button class="btn">重設</button></div>
                                                     </div>
                                                     
                                                 </div>
@@ -280,6 +287,7 @@
                                                                 <tr>
                                                                     <th></th>
                                                                     <th>編號</th>
+                                                                    <th>單位</th>
                                                                     <th>會員帳號</th>
                                                                     <th>姓名</th>
                                                                     <th>已選入案件</th>
@@ -289,6 +297,7 @@
                                                                 <tr>
                                                                     <td><input type="checkbox" class="used" checked></td>
                                                                     <td>1</td>
+                                                                    <td>凌網科技</td>
                                                                     <td>liucc@hyweb.com.tw</td>
                                                                     <td>劉佳淇</td>
                                                                     <td>ilosh111-Z102, ilosh111-Z103</td>
