--- a/ilosh_planapplyEdit.htm
+++ b/ilosh_planapplyEdit.htm
@@ -267,9 +267,9 @@
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="liucc">
                                                             <label>會員帳號查詢</label>
-                                                            <button class="btn btn-icon">
+                                                            <!--button class="btn btn-icon">
                                                                 <i class="i_trash"></i>
-                                                            </button>
+                                                            </button-->
                                                         </div>
                                                         <!-- <div class="help">說明文字</div> -->
                                                         <div class="additional"><button class="btn btn-primary">搜尋</button></div>
