--- a/ilosh_site_list.htm
+++ b/ilosh_site_list.htm
@@ -114,7 +114,7 @@
                                                 <tr>
                                                     <td class="num">3</td>
                                                     <td><a href="#">勞動部勞動及職業安全衛生研究所科研採購網</a></td>
-                                                    <td><span class="green">公開(上架)</span></td>
+                                                    <td><span class="gray">下架(關閉)</span></td>
                                                     <td><time>2022/07/27</time></td>
                                                     <td>
                                                         <div class="btn_grp">
