--- a/ilosh_vdiList.htm
+++ b/ilosh_vdiList.htm
@@ -34,16 +34,16 @@
                 <ul>
                     <li><a href="index.htm">首頁</a></li>
                     <li><a href="#">客製化管理</a></li>
-                    <li>案件管理</li>
+                    <li>虛擬主機管理</li>
                 </ul>
             </div>
             <!-- gird section -->
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>案件管理</h2>
-                        <button class="btn btn-primary btn-adv">
-                            <i class="i_search"></i></button>
+                        <h2>虛擬主機管理</h2>
+                        <!--button class="btn btn-primary btn-adv">
+                            <i class="i_search"></i></button-->
                     </div>
                     <!-- flex-12 搜尋區塊-->
                     <div class="flex-12">
@@ -111,20 +111,19 @@
                             <!-- 中央區塊 -->
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>案件資訊條列</h3>
+                                    <h3>虛擬主機資訊條列</h3>
                                 </div>
                                 <div class="_head">
-                                    <div class="tag">
+                                    <!--div class="tag">
                                         狀態： 
                                         <ul>
                                             <li class="active"><a href="#">全部</a></li>
-                                            <!--li><a href="#">待確認</a></li-->
                                             <li><a href="#">啟用</a></li>
                                             <li><a href="#">不啟用</a></li>
                                         </ul>
 
-                                    </div>
-                                <!-- 頁碼 -->
+                                    </div-->
+                                    <!-- 頁碼 -->
                                     <div class="pagination">
                                         <form action="" class="form_inline">
                                             <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
@@ -136,7 +135,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='ilosh_planapplyEdit.htm';"><i class="i_add"></i>新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='ilosh_vdiEdit.htm';"><i class="i_add"></i>新增</button>
                                     </div>
                                 </div>
                                 <div class="_content">
@@ -146,32 +145,23 @@
                                             <thead>
                                                 <tr>
                                                     <th>編號</th>
-                                                    <th class="text-left">案件編號</th>
-                                                    <th>案件名稱</th>
-                                                    <th>案件負責人姓名</th>
-                                                    <th class="text-left">狀態</th>
-                                                    <th>
-                                                        <a href="#">作業開始日期 <i class="i_sort"></i></a>
-                                                    </th><th>
-                                                        <a href="#">作業結束日期 <i class="i_sort"></i></a>
-                                                    </th>
-                                                    <th>案件督管人</th>
+                                                    <th>主機名稱</th>
+                                                    <th>說明</th>
+                                                    <th>狀態</th>
+                                                    <th>建立日期</th>
                                                     <th>編輯</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
                                                     <td class="num">1</td>
-                                                    <td>ilosh111-Z102</td>
-                                                    <td><a href="ilosh_planapplyEdit.htm">臺灣職安卡計畫促進勞工就轉業及職業災害分析-5</a></td>
-                                                    <td>陳曉勤(職安署)</td>
+                                                    <td><a href="ilosh_vdiEdit.htm">Data-01</a></td>
+                                                    <td></td>
                                                     <td>啟用</td>
-                                                    <td><time>2021/11/16</time></td>
                                                     <td><time>2022/11/15</time></td>
-                                                    <td>劉佳淇</td>
                                                     <td>
                                                         <div class="btn_grp">
-                                                            <a href="ilosh_planapplyEdit.htm" class="btn"><i class="i_edit"></i>編輯</a>
+                                                            <a href="ilosh_vdiEdit.htm" class="btn"><i class="i_edit"></i>編輯</a>
                                                         </div>
                                                     </td>
                                                 </tr>
