--- a/index_list.html
+++ b/index_list.html
@@ -340,6 +340,8 @@
                             <ul>
                                 <li><font style="color:red;">(調整版面)</font> 2-3.案件清單 <a href="ilosh_planapplyList.htm" target="_blank"></a></li>
                                 <li><font style="color:red;">(調整版面)</font> 2-4.案件管理 <a href="ilosh_planapplyEdit.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(調整版面)</font> 2-5.虛擬主機清單 <a href="ilosh_vdiList.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(調整版面)</font> 2-6.虛擬主機管理 <a href="ilosh_vdiEdit.htm" target="_blank"></a></li>
                             </ul>
 
                         </td>
